tennessee/nashville/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nashville-gateway
  namespace: nashville
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nashville-virtualservice
  namespace: nashville
spec:
  hosts:
  - "*"
  gateways:
  - nashville-gateway
  http:
  - match:
    - uri:
        exact: /nashville
    - uri:
        exact: /nashville1
    - uri:
        prefix: /nashville2
    route:
    - destination:
        host: frontend
        port:
          number: 80
